; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/i2c/m5mols/extr_m5mols_controls.c_m5mols_set_iso.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/i2c/m5mols/extr_m5mols_controls.c_m5mols_set_iso.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.m5mols_info = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@AE_ISO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.m5mols_info*, i32)* @m5mols_set_iso to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @m5mols_set_iso(%struct.m5mols_info* %0, i32 %1) #0 {
  %3 = alloca %struct.m5mols_info*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.m5mols_info* %0, %struct.m5mols_info** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  br label %16

9:                                                ; preds = %2
  %10 = load %struct.m5mols_info*, %struct.m5mols_info** %3, align 8
  %11 = getelementptr inbounds %struct.m5mols_info, %struct.m5mols_info* %10, i32 0, i32 1
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = add nsw i64 %14, 1
  br label %16

16:                                               ; preds = %9, %8
  %17 = phi i64 [ 0, %8 ], [ %15, %9 ]
  store i64 %17, i64* %5, align 8
  %18 = load %struct.m5mols_info*, %struct.m5mols_info** %3, align 8
  %19 = getelementptr inbounds %struct.m5mols_info, %struct.m5mols_info* %18, i32 0, i32 0
  %20 = load i32, i32* @AE_ISO, align 4
  %21 = load i64, i64* %5, align 8
  %22 = call i32 @m5mols_write(i32* %19, i32 %20, i64 %21)
  ret i32 %22
}

declare dso_local i32 @m5mols_write(i32*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
